# ARXML_LanguageServer

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  azure-pipelines.yml
include/: arxmlStorage.hpp  config.hpp  configurationGlobals.h  ioHandler.hpp  languageService.hpp  lspExceptions.hpp  lspParser.hpp  messageParser.hpp  methods.hpp  readWrite.hpp  shortnameStorage.hpp  types.hpp  xmlParser.hpp
old/: shortnameStorage.hpp
src/: arxmlStorage.cpp  config.cpp  configurationGlobals.cpp  ioHandler.cpp  languageService.cpp  lspParser.cpp  main.cpp  messageParser.cpp  methods.cpp  parseHeader.cpp  parseHeader.hpp  readWrite.cpp  shortnameStorage.cpp  xmlParser.cpp
src/docs/: Developing.md
src/test/: parserTest.cpp  storageTest.cpp  tests.cpp
src/warehouse/: main.cpp
